client and server skeleton

--- a/server/nodnd.html
+++ b/server/nodnd.html
@@ -28,7 +28,7 @@ function initMap() {
 		console.log(geojson)
 		console.log(geojson.features[0].geometry.type)
 		map.data.addGeoJson(geojson);
-		// map.data.setStyle(function(geojson.features[0].geometry.type){
+		// map.data.setStyle(function(geojson.features[0].geometry.type="LineString"){
 		// 	return mystyle
 		// });
 		zoom(map);
