--- a/client/bus-routes.html
+++ b/client/bus-routes.html
@@ -2,6 +2,60 @@
   <div class="row">
       <div id="map-outer" class="col-md-12">
           <div  class="col-md-3">
+<div class='my-legend'>
+<div class='legend-title'>Bus Speeds</div>
+<div class='legend-scale'>
+  <ul class='legend-labels'>
+    <li><span style='background:green;'></span>over 20mph</li>
+    <li><span style='background:blue;'></span> 17mph</li>
+    <li><span style='background:yellow;'></span> 12mph</li>
+    <li><span style='background:purple;'></span> 8mph</li>
+    <li><span style='background:red;'></span> less than 8mph</li>
+    <li><span style='background:black;'></span>not reporting</li>
+  </ul>
+</div>
+<div class='legend-source'>Source: <a href="#link to source">time point crossing MBTA data</a></div>
+</div>
+
+<style type='text/css'>
+  .my-legend .legend-title {
+    text-align: left;
+    margin-bottom: 5px;
+    font-weight: bold;
+    font-size: 90%;
+    }
+  .my-legend .legend-scale ul {
+    margin: 0;
+    margin-bottom: 5px;
+    padding: 0;
+    float: left;
+    list-style: none;
+    }
+  .my-legend .legend-scale ul li {
+    font-size: 80%;
+    list-style: none;
+    margin-left: 0;
+    line-height: 18px;
+    margin-bottom: 2px;
+    }
+  .my-legend ul.legend-labels li span {
+    display: block;
+    float: left;
+    height: 16px;
+    width: 30px;
+    margin-right: 5px;
+    margin-left: 0;
+    border: 1px solid #999;
+    }
+  .my-legend .legend-source {
+    font-size: 70%;
+    color: #999;
+    clear: both;
+    }
+  .my-legend a {
+    color: #777;
+    }
+</style>
           </div>
         <bus-map></bus-map>     
       </div><!-- /map-outer -->
