--- a/client/bus-routes.html
+++ b/client/bus-routes.html
@@ -15,6 +15,8 @@
   </ul>
 </div>
 <div class='legend-source'>Source: <a href="#link to source">time point crossing MBTA data</a></div>
+<p>press refresh if map does not appear</p>
+<a href="https://github.com/mckennatim/boggedbus" title="https://github.com/mckennatim/boggedbus">Github Repository</a>
 </div>
 
 <style type='text/css'>
