--- a/client/bus-info.html
+++ b/client/bus-info.html
@@ -26,7 +26,7 @@
                 </select><br>
         </div>      
         <div class="col-md-3">
-            <button type="submit"class="btn" ng-click="mapIt()">map it !</button>
+            <button type="submit"class="btn btn-default bkg-config" ng-click="mapIt()">map it !</button>
         </div>                     
     </div>
 </form>
