--- a/client/bus-info.html
+++ b/client/bus-info.html
@@ -5,7 +5,7 @@
             <big>Find bogged-down sections of route: </big>
         </div>
         <div class="col-md-7">
-            <select ng-model="route" ng-options="'rt:'+route.route +'-'+ route.dir +': ' +route.headsign  for route in routes" ng-change="getMap(route)">
+            <select ng-model="route" ng-options="'rt:'+route.route +'-'+ route.dir +': ' +route.headsign  for route in routes" ng-change="mapIt(route)">
                 <option value="" selected>-select bus route to map-</option>
             </select><br>
         </div>
@@ -15,14 +15,14 @@
             <big>on:</big>
         </div>
         <div class="col-md-3">
-                <select  ng-model="sdate"  ng-options="sdate for sdate in sdates" >
+                <select  ng-model="sdate"  ng-options="sdate for sdate in sdates" ng-change="mapIt()">
                 </select><br>
         </div>
         <div class="col-md-1">
             <big>@</big>
         </div>
         <div class="col-md-4">
-                <select  ng-model="time"  ng-options="time for time in times" >
+                <select  ng-model="time"  ng-options="time for time in times" ng-change="mapIt()" >
                 </select><br>
         </div>      
         <div class="col-md-3">
